--- a/VSExam/build.gradle
+++ b/VSExam/build.gradle
@@ -23,7 +23,8 @@ android {
 }
 
 dependencies {
+    compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.android.support:support-v4:18.0.+'
-    compile 'com.android.support:appcompat-v7:18.0.0'
+    compile 'com.android.support:appcompat-v7:18.0.0+'
     compile 'org.jsoup:jsoup:1.7.2'
 }
