--- a/VSExam/src/main/AndroidManifest.xml
+++ b/VSExam/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <service android:name="com.frca.vsexam.helper.RegisteringService" />
+
     </application>
 
 </manifest>
