--- a/VSExam/build.gradle
+++ b/VSExam/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:support-v4:18.0.+'
     compile 'com.android.support:appcompat-v7:18.0.0+'
     compile 'org.jsoup:jsoup:1.7.3'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
