By default dont write anything on external storage
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/VSExam/src/main/AndroidManifest.xml
+++ b/VSExam/src/main/AndroidManifest.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.frca.vsexam"
-    android:versionCode="1"
-    android:versionName="1.0" >
+          package="com.frca.vsexam"
+          android:versionCode="2"
+          android:versionName="1.1" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".context.MainActivity"
-            android:label="@string/app_name" >
+    <application android:allowBackup="true"
+                 android:icon="@drawable/ic_launcher"
+                 android:label="@string/app_name"
+                 android:theme="@style/AppTheme" >
+
+        <activity android:name=".context.MainActivity"
+                  android:label="@string/app_name" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <receiver android:name="com.frca.vsexam.context.OnStartReceiver">
@@ -31,11 +30,12 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
         <service android:name="com.frca.vsexam.helper.RegisteringService" />
-        <activity
-            android:name="com.frca.vsexam.context.SettingsActivity"
-            android:icon="@android:drawable/ic_menu_manage"
-            android:label="@string/action_settings" />
+
+        <activity android:name="com.frca.vsexam.context.SettingsActivity"
+                  android:icon="@android:drawable/ic_menu_manage"
+                  android:label="@string/action_settings" />
 
     </application>
 
