--- a/VSExam/build.gradle
+++ b/VSExam/build.gradle
@@ -20,6 +20,10 @@ android {
         minSdkVersion 8
         targetSdkVersion 19
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
