--- a/VSExam/src/main/AndroidManifest.xml
+++ b/VSExam/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.frca.vsexam"
-          android:versionCode="2"
+          android:versionCode="1"
           android:versionName="1.1" >
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -34,7 +34,7 @@
         <service android:name="com.frca.vsexam.helper.RegisteringService" />
 
         <activity android:name="com.frca.vsexam.context.SettingsActivity"
-                  android:icon="@android:drawable/ic_menu_manage"
+                  android:icon="@drawable/ic_menu_manage"
                   android:label="@string/action_settings" />
 
     </application>
