--- a/VSExam/src/main/AndroidManifest.xml
+++ b/VSExam/src/main/AndroidManifest.xml
@@ -1,38 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.frca.vsexam"
-          android:versionCode="3"
-          android:versionName="1.3" >
+    package="com.frca.vsexam" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
-    <application android:allowBackup="true"
-                 android:icon="@drawable/ic_launcher"
-                 android:label="@string/app_name"
-                 android:theme="@style/AppTheme" >
-
-        <activity android:name=".context.StartingActivity"
-                  android:theme="@style/StartingTheme">
-
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.App" >
+        <activity
+            android:name="com.frca.vsexam.context.StartingActivity"
+            android:theme="@style/StartingTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity
+            android:name=".context.ExamActivity"
+            android:icon="@drawable/ic_logo_white" />
+        <activity
+            android:name="com.frca.vsexam.context.SettingsActivity"
+            android:icon="@drawable/ic_menu_manage"
+            android:label="@string/action_settings" />
 
-        <activity android:name=".context.MainActivity"
-                  android:icon="@drawable/ic_logo_white" />
-
-        <activity android:name="com.frca.vsexam.context.SettingsActivity"
-                  android:icon="@drawable/ic_menu_manage"
-                  android:label="@string/action_settings" />
-
-        <receiver android:name="com.frca.vsexam.context.OnStartReceiver">
+        <receiver android:name="com.frca.vsexam.context.OnStartReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -40,6 +37,10 @@
 
         <service android:name="com.frca.vsexam.helper.RegisteringService" />
 
+        <activity
+            android:name="com.frca.vsexam.context.ExamlessActivity"
+            android:label="@string/title_activity_examless" >
+        </activity>
     </application>
 
 </manifest>
